Bug 1161416: Don't wait for a drain complete that will never happen. r=cpearce